# avaliando-gerenciadores-de-pacotes-python

./: .gitignore  communication-outline.md  index.qmd  pyproject.toml  requirements.txt
my_app/: pyproject.toml  requirements.txt
my_app/src/my_app/: main.py
my_django/: README.md  pyproject.toml  requirements.txt
my_django/src/my_django/: main.py
my_requests/: README.md  pyproject.toml
my_requests/src/my_requests/: __init__.py  main.py
