[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ítalo Epifânio",email = "italoepifaniols@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "my-django @ file:///home/italo/open/avaliando-gerenciadores-de-pacotes-python/my_django"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
