[project]
name = "my-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Ítalo Epifânio",email = "italoepifaniols@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "my-requests @ file:///home/italo/open/avaliando-gerenciadores-de-pacotes-python/my_requests"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
